# bevy-minimal

./: Cargo.toml  README.md
src/: main.rs
src/common/: components.rs  mod.rs  resources.rs  systems.rs  utils.rs
src/enemy/: bundles.rs  components.rs  mod.rs  resources.rs  systems.rs
src/game/: components.rs  mod.rs  states.rs  systems.rs
src/item/: bundles.rs  components.rs  mod.rs  resources.rs  systems.rs
src/player/: actions.rs  bundles.rs  components.rs  mod.rs  systems.rs
src/power_up/: bundles.rs  components.rs  mod.rs  resources.rs  systems.rs
src/score/: mod.rs  resources.rs
src/ui/: components.rs  mod.rs  styles.rs  systems.rs  utils.rs
src/world/: components.rs  mod.rs  resources.rs  systems.rs
