[package]
name = "bevy-minimal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3


[features]
default = [
  "bevy/animation",
  "bevy/bevy_asset",
  "bevy/bevy_scene",
  "bevy/bevy_winit",
  "bevy/bevy_core_pipeline",
  "bevy/bevy_pbr",
  "bevy/bevy_gltf",
  "bevy/bevy_render",
  "bevy/bevy_sprite",
  "bevy/bevy_text",
  "bevy/bevy_ui",
  "bevy/png",
  "bevy/hdr",
  "bevy/zstd",
  "bevy/x11",
  "bevy/ktx2",
  "bevy/filesystem_watcher",
  "bevy/tonemapping_luts",
]

[dependencies]
bevy = { version = "0.10.1", default-features = false }
bevy_kira_audio = { version = "0.15" }
rand = "0.8.5"
leafwing-input-manager = "0.9.2"
